# StreamingService_VibeCoding

./: .gitignore  CMakeLists.txt  README.md  config.json  streaming-service-CLAUDE.md
.github/workflows/: deploy.yml
nginx/: rtmp.conf  site.conf
scripts/: deploy.sh  setup.sh
src/: main.cpp  server.cpp  server.h
src/api/: auth_api.cpp  auth_api.h  stream_api.cpp  stream_api.h
src/core/: auth_manager.cpp  auth_manager.h  config.cpp  config.h  stream_manager.cpp  stream_manager.h
src/utils/: logger.cpp  logger.h
web/: index.html  player.js  style.css
